finals - or near to -- dags

--- a/manuscripts/24-accepted-ehs/part-1-dags/part-1-dags.qmd
+++ b/manuscripts/24-accepted-ehs/part-1-dags/part-1-dags.qmd
@@ -500,7 +500,7 @@ Judea Pearl proved these theorems in the 1990s [@pearl1995; @pearl2009a]. It fol
 1. An open path (no variables conditioned on) is blocked only if two arrows point to the same node: $A \rightarrow C \leftarrow B$. The node of common effect (here $C$) is called a *collider*.
 2. Conditioning on a collider does not block a path; thus, $A \rightarrow \boxed{C} \leftarrow B$ can lead to an association between $A$ and $B$ in the absence of causation.
 3. Conditioning on a descendant of a collider does not block a path; thus, if $C \rightarrow \boxed{C'}$, then $A \rightarrow \boxed{C'} \leftarrow B$ is open.
-4. If a path does not contain a collider, any variable conditioned along the path blocks it; thus, $A \rightarrow \boxed{B} \rightarrow C$ blocks the path from $A$ to $C$ [@pearl2009a; @hernan2023, p. 78].
+4. If a path does not contain a collider, any variable conditioned along the path blocks it; thus, $A \rightarrow \boxed{B} \rightarrow C$ blocks the path from $A$ to $C$ [@pearl2009a; @hernan2024WHATIF, p. 78].
 
 #### Backdoor Adjustment
 
@@ -554,7 +554,7 @@ $$
 
 Causal directed acyclic graphs do not directly represent counterfactual outcomes. Instead, they evaluate whether causality can be identified from hypothetical interventions on the variables represented in a graph. Formally, causal directed acyclic graphs rely on Judea Pearl's do-calculus [@pearl2009a], which relies on the concept of an 'interventional distribution'. The idea is that any node in a graph can be intervened upon. Nodes and edges in a causal diagram correspond to non-parametric structural equations. Note that non-parametric structural equations are causal-structural models. They are fundamentally different from statistical structural equation models that are employed in many human sciences.
 
-In a causal directed acyclic graph, non-parametric structural equations represent the underlying causal mechanisms without making specific parametric assumptions about the functional forms of relationships. It is important to note that non-parametric structural equations, also known as structural causal models, are mathematical representations of the causal relationships between variables in a system. These equations describe the functional relationships between variables without specifying the particular functional form or the probability distributions of the variables. In contrast, statistical structural equation models, commonly used in the social sciences and psychology, make specific assumptions about the functional form of the relationships (e.g., linear, polynomial, or exponential) and the probability distributions of the variables (e.g., normal, Poisson, or binomial). Statistical structural equation models model observed data. Non-parametric structural equations state the assumed causal structure of the system. When we employ statistical structural equation models or any other statistical model, we must first state the assumed functional relationships that we maintain (under expert advice) hold for the data. We must do so without making assumptions about the functional form of the statistical model we will eventually employ -- statistics come later, only after we have evaluated whether the causal effect we seek may be identified with data. Pearl's do-calculus and the rules of d-separation are based on non-parametric structural equations, which provide a flexible and generalisable framework for causal inference [@pearl2009a; @pearl2012causal]. Pearl's structural causal models work as follows. 
+In a causal directed acyclic graph, non-parametric structural equations represent the underlying causal mechanisms without making specific parametric assumptions about the functional forms of relationships. It is important to note that non-parametric structural equations, also known as structural causal models, are mathematical representations of the causal relationships between variables in a system. These equations describe the functional relationships between variables without specifying the particular functional form or the probability distributions of the variables. In contrast, statistical structural equation models, commonly used in the social sciences and psychology, make specific assumptions about the functional form of the relationships (e.g., linear, polynomial, or exponential) and the probability distributions of the variables (e.g., normal, Poisson, or binomial). Statistical structural equation models model observed data. Non-parametric structural equations state the assumed causal structure of the system. When we employ statistical structural equation models or any other statistical model, we must first state the assumed functional relationships that we maintain (under expert advice) hold for the data. We must do so without making assumptions about the functional form of the statistical model we will eventually employ -- statistics come later, only after we have evaluated whether the causal effect we seek may be identified with data. Pearl's do-calculus and the rules of d-separation are based on non-parametric structural equations, which provide a flexible and generalisable framework for causal inference [@pearl2009a]. Pearl's structural causal models work as follows. 
 
 Let $L$ denote the common causes of treatment $A$ and outcome $Y$:
 
@@ -638,7 +638,7 @@ To estimate a causal effect of $Y$ on $A$, we would focus on: $\boxed{Y_{-1}} \t
 
 We use causal directed acyclic graphs to represent and evaluate structural sources of bias. We do not use these causal graphs to represent the entirety of the causal system in which we are interested, but rather only those features necessary to evaluate conditional exchangeability, or equivalently to evaluate d-separation. Moreover, causal directed acyclic graphs should not be confused with the structural equation models employed in the statistical structural equation modelling traditions (see also @rohrer2022PATH). Although Pearl's formalism is built upon 'Non-Parametric Structural Equation Models,' the term 'Structural Equation Model' can be misleading. Causal graphs are structural models that represent assumptions about reality, they are not statistical models. We use structural causal models to evaluate identifiability. We create causal graphs before we embark on statistical modelling. They aim to clarify how to write statistical models by elucidating which variables we must include in our statistical models and, equally important, which variables we must exclude to avoid invalidating our causal inferences. All causal graphs are grounded in our assumptions about the structures of causation. Although it is sometimes possible to use causal diagrams for causal discovery, their purpose is to clarify d-separation. 
 
-This distinction between structural and statistical models is fundamental because absent clearly defined causal contrasts and carefully evaluated assumptions about structural sources of bias, the statistical structural equation modelling tradition offers no guarantees that the coefficients investigators recover are interpretable. Misunderstanding this difference between structural and statistical models has led to considerable confusion across the human sciences [@vanderweele2015; @vanderweele2022; @vanderweele2022b; @bulbulia2022].
+This distinction between structural and statistical models is fundamental because absent clearly defined causal contrasts and carefully evaluated assumptions about structural sources of bias, the statistical structural equation modelling tradition offers no guarantees that the coefficients investigators recover are interpretable. Misunderstanding this difference between structural and statistical models has led to considerable confusion across the human sciences [@vanderweele2015; @vanderweele2022;@vanderweele2022a; @bulbulia2022].
 
 
 ## Part 3. How Causal Directed Acyclic Graphs Clarify the Importance of Timing of Events Recorded in Data {#id-sec-3}
@@ -882,7 +882,7 @@ Here is how investigators may construct safe and effective directed acyclic grap
 
 Nevertheless, after precisely stating our causal question, the most difficult and important challenge is considering whether and how it might be identified in the data. The 'statistical models first' approach routinely applied in most human sciences is soon ending. This approach has been attractive because it is relatively easy to implement—the methods do not require extensive training—and because the application of statistical models to data appears rigorous. However, if the coefficients we recover from these methods have meaning, this is typically accidental. Without a causal framework, these coefficients are not just uninformative about what works and why; they lack any meaning [@ogburn2021].
 
-There are many good resources available for learning causal directed acyclic graphs [@rohrer2018; @hernan2023; @cinelli2022; @barrett2021; @mcelreath2020; @greenland1999; @suzuki2020; @pearl2009a; @hernan2024WHATIF; @major2023exploring; @greenland1999; @morgan2014]. This work aims to add to these resources, first by providing additional conceptual orientation to the frameworks and workflows of causal data science, highlighting the risks of applying causal graphs without this understanding; second, by using causal diagrams to emphasise the importance of ensuring relative timing for the variables whose causal relationships are represented on the graph; third, by employing causal diagrams to clarify the limitations of longitudinal data for certain questions in causal mediation and time-varying confounding under time-varying treatments, which remain topics of confusion in many human sciences (see @bulbulia2024swigstime for a detailed explanation). 
+There are many good resources available for learning causal directed acyclic graphs [@rohrer2018; @hernan2024WHATIF; @cinelli2022; @barrett2021; @mcelreath2020; @greenland1999; @suzuki2020; @pearl2009a; @major2023exploring; @greenland1999; @morgan2014]. This work aims to add to these resources, first by providing additional conceptual orientation to the frameworks and workflows of causal data science, highlighting the risks of applying causal graphs without this understanding; second, by using causal diagrams to emphasise the importance of ensuring relative timing for the variables whose causal relationships are represented on the graph; third, by employing causal diagrams to clarify the limitations of longitudinal data for certain questions in causal mediation and time-varying confounding under time-varying treatments, which remain topics of confusion in many human sciences (see @bulbulia2024swigstime for a detailed explanation). 
 
 For those just getting started on causal diagrams, I recommend Miguel Hernan's free course here: [https://www.edx.org/learn/data-analysis/harvard-university-causal-diagrams-draw-your-assumptions-before-your-conclusions, accessed 10 June 2024](https://www.edx.org/learn/data-analysis/harvard-university-causal-diagrams-draw-your-assumptions-before-your-conclusions) 
 
