--- a/manuscripts/24-accepted-ehs/part-1-dags/part-1-dags.tex
+++ b/manuscripts/24-accepted-ehs/part-1-dags/part-1-dags.tex
@@ -211,7 +211,7 @@ Confounding}
       
 
 
-\date{2024-06-11}
+\date{2024-06-12}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -268,7 +268,7 @@ the term `crisis' is overused, the state of causal inference across many
 human sciences, including experimental sciences, has much headroom for
 improvement. `Room for headroom' applies to poor experimental designs
 that unintentionally weaken causal claims
-(\citeproc{ref-bulbulia_2024_experiments}{Bulbulia 2024d};
+(\citeproc{ref-bulbulia_2024_experiments}{Bulbulia 2024e};
 \citeproc{ref-hernan2017per}{Hernán \emph{et al.} 2017}). Fortunately,
 recent decades have seen considerable progress in causal data science,
 commonly called `causal inference.' The progress has transformed those
@@ -502,7 +502,7 @@ effect' (\citeproc{ref-hernan2017per}{Hernán \emph{et al.} 2017};
 \citeproc{ref-lash2020}{Lash \emph{et al.} 2020}). To obtain the
 per-protocol effect for randomised experiments, methods for causal
 inference in observational settings must be applied
-(\citeproc{ref-bulbulia_2024_experiments}{Bulbulia 2024d}).
+(\citeproc{ref-bulbulia_2024_experiments}{Bulbulia 2024e}).
 
 Fourth, I have presented the average treatment effect on the difference
 scale, that is, as a difference in average potential outcomes for the
@@ -531,7 +531,7 @@ injuries. Unfortunately, such practices are widespread
 causal graphical methods are useful for describing causal identification
 in experiments (refer to Hernán \emph{et al.}
 (\citeproc{ref-hernan2017per}{2017})), a topic we consider elsewhere
-(\citeproc{ref-bulbulia_2024_experiments}{Bulbulia 2024d}).
+(\citeproc{ref-bulbulia_2024_experiments}{Bulbulia 2024e}).
 
 In observational studies, investigators might wish to describe the
 target population of interest as a restriction of the study sample
@@ -1189,8 +1189,9 @@ It follows that:
 \item
   If a path does not contain a collider, any variable conditioned along
   the path blocks it; thus, \(A \rightarrow \boxed{B} \rightarrow C\)
-  blocks the path from \(A\) to \(C\) (\citeproc{ref-hernan2023}{Hernan
-  and Robins 2023 p. 78}; \citeproc{ref-pearl2009a}{Pearl 2009}).
+  blocks the path from \(A\) to \(C\)
+  (\citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024 p. 78};
+  \citeproc{ref-pearl2009a}{Pearl 2009}).
 \end{enumerate}
 
 \paragraph{Backdoor Adjustment}\label{backdoor-adjustment}
@@ -1343,9 +1344,8 @@ later, only after we have evaluated whether the causal effect we seek
 may be identified with data. Pearl's do-calculus and the rules of
 d-separation are based on non-parametric structural equations, which
 provide a flexible and generalisable framework for causal inference
-(\citeproc{ref-pearl2009a}{Pearl 2009};
-\citeproc{ref-pearl2012causal}{\textbf{pearl2012causal?}}). Pearl's
-structural causal models work as follows.
+(\citeproc{ref-pearl2009a}{Pearl 2009}). Pearl's structural causal
+models work as follows.
 
 Let \(L\) denote the common causes of treatment \(A\) and outcome \(Y\):
 
@@ -1614,7 +1614,7 @@ models has led to considerable confusion across the human sciences
 (\citeproc{ref-bulbulia2022}{Bulbulia 2022};
 \citeproc{ref-vanderweele2015}{VanderWeele 2015};
 \citeproc{ref-vanderweele2022}{VanderWeele 2022};
-\citeproc{ref-vanderweele2022b}{\textbf{vanderweele2022b?}}).
+\citeproc{ref-vanderweele2022a}{VanderWeele and Vansteelandt 2022}).
 
 \subsection{Part 3. How Causal Directed Acyclic Graphs Clarify the
 Importance of Timing of Events Recorded in Data}\label{id-sec-3}
@@ -2388,7 +2388,7 @@ acyclic graphs can clarify structural biases from measurement error and
 restrictions of the target population in the sample population at the
 start and end of the study. We can (and should) examine structural
 features of bias in these settings. For an overview, refer to Bulbulia
-(\citeproc{ref-bulbulia2024wierd}{2024e}).
+(\citeproc{ref-bulbulia2024wierd}{2024d}).
 
 \subsection{Conclusions}\label{id-sec-6}
 
@@ -2403,7 +2403,7 @@ restriction bias'). Valid causal inferences require addressing all
 structural sources of bias. This work does not aim for complete coverage
 of how causal diagrams may be useful for off-label applications other
 than assessing d-separation, but it hopes to stimulate curiosity
-(\citeproc{ref-bulbulia2024wierd}{Bulbulia 2024e};
+(\citeproc{ref-bulbulia2024wierd}{Bulbulia 2024d};
 \citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024};
 \citeproc{ref-hernan2017SELECTIONWITHOUTCOLLIDER}{Hernán 2017};
 \citeproc{ref-hernan2009MEASUREMENT}{Hernán and Cole 2009};
@@ -2467,8 +2467,8 @@ There are many good resources available for learning causal directed
 acyclic graphs (\citeproc{ref-barrett2021}{Barrett 2021};
 \citeproc{ref-cinelli2022}{Cinelli \emph{et al.} 2022};
 \citeproc{ref-greenland1999}{Greenland \emph{et al.} 1999},
-\citeproc{ref-greenland1999}{1999}; \citeproc{ref-hernan2023}{Hernan and
-Robins 2023}, \citeproc{ref-hernan2024WHATIF}{2024};
+\citeproc{ref-greenland1999}{1999};
+\citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024};
 \citeproc{ref-major2023exploring}{Major-Smith 2023};
 \citeproc{ref-mcelreath2020}{McElreath 2020};
 \citeproc{ref-morgan2014}{Morgan and Winship 2014};
@@ -2610,14 +2610,14 @@ Interaction, mediation, and time-varying treatments. \emph{Evolutionary
 Human Sciences}, \textbf{6}.
 
 \bibitem[\citeproctext]{ref-bulbulia2024wierd}
-Bulbulia, JosephA (2024e) Methods in causal inference part 3:
+Bulbulia, JosephA (2024d) Methods in causal inference part 3:
 Measurement error and external validity threats. \emph{Evolutionary
 Human Sciences}, \textbf{6}.
 
 \bibitem[\citeproctext]{ref-bulbulia_2024_experiments}
-Bulbulia, JosephA (2024d) Methods in causal inference part 3:
-Measurement error and external validity threats. \emph{Evolutionary
-Human Sciences}, \textbf{6}.
+Bulbulia, JosephA (2024e) Methods in causal inference part 4:
+Confounding in experiments. \emph{Evolutionary Human Sciences},
+\textbf{6}.
 
 \bibitem[\citeproctext]{ref-chatton2020}
 Chatton, A, Le Borgne, F, Leyrat, C, \ldots{} Foucher, Y (2020)
@@ -2687,11 +2687,6 @@ Simulation-based inference for regression models}. Retrieved from
 Haneuse, S, and Rotnitzky, A (2013) Estimation of the effect of
 interventions that modify the received treatment. \emph{Statistics in
 Medicine}, \textbf{32}(30), 5260--5277.
-
-\bibitem[\citeproctext]{ref-hernan2023}
-Hernan, MA, and Robins, JM (2023) \emph{Causal inference}, Taylor \&
-Francis. Retrieved from
-\url{https://books.google.co.nz/books?id=/_KnHIAAACAAJ}
 
 \bibitem[\citeproctext]{ref-hernan2024WHATIF}
 Hernan, MA, and Robins, JM (2024) \emph{Causal inference: What if?},
@@ -3015,6 +3010,12 @@ doi:\href{https://doi.org/10.1093/aje/kwr458}{10.1093/aje/kwr458}.
 VanderWeele, TJ, Mathur, MB, and Chen, Y (2020) Outcome-wide
 longitudinal designs for causal inference: A new template for empirical
 studies. \emph{Statistical Science}, \textbf{35}(3), 437--466.
+
+\bibitem[\citeproctext]{ref-vanderweele2022a}
+VanderWeele, TJ, and Vansteelandt, S (2022) A statistical test to reject
+the structural interpretation of a latent factor model. \emph{Journal of
+the Royal Statistical Society Series B: Statistical Methodology},
+\textbf{84}(5), 2032--2054.
 
 \bibitem[\citeproctext]{ref-vansteelandt2022a}
 Vansteelandt, S, and Dukes, O (2022) Assumption-lean inference for
