--- a/manuscripts/24-accepted-ehs/part-2-time-varying/part-2-time-varying.tex
+++ b/manuscripts/24-accepted-ehs/part-2-time-varying/part-2-time-varying.tex
@@ -225,11 +225,13 @@ acyclic diagrams (causal DAGs) and Single World Intervention Graphs to
 elucidate identification workflows. I show that when multiple treatments
 exist, common methods for statistical inference, such as multi-level
 regressions and statistical structural equation models, cannot typically
-recover the causal quantities we seek. By framing and addressing causal
-questions of interaction, mediation, and time-varying treatments
-properly, we can expose the limitations of popular methods and guide
+recover the causal quantities we seek. By properly framing and
+addressing causal questions of interaction, mediation, and time-varying
+treatments, we can expose the limitations of popular methods and guide
 researchers to a clearer understanding of the phenomena that animate our
-interests. \textbf{KEYWORDS}: \emph{Causal Inference}; \emph{DAGs};
+interests.
+
+\textbf{KEYWORDS}: \emph{Causal Inference}; \emph{DAGs};
 \emph{Evolution}; \emph{Mediation}; \emph{Moderation};
 \emph{Longitudinal Growth}; Single World Intervention Graphs,
 \emph{SWIGs}; \emph{Time-varying Treatments}
