--- a/manuscripts/24-accepted-ehs/part-3-measurement/s1-part-3-measurement.tex
+++ b/manuscripts/24-accepted-ehs/part-3-measurement/s1-part-3-measurement.tex
@@ -848,7 +848,7 @@ arrows indicate the counterfactual variables relevant for correcting
 this bias. Knowing how \(V(\tilde{a})\) relates to \(E^Y\) would allow
 us to recover \(Y(\tilde{a})\) from \(V(\tilde{a})\).
 
-Table~\ref{tbl-tblswigmex}\(\mathcal{G}_{1.1-1.2}\) reveals that
+\textbf{?@tbl-tblswigmex}\(\mathcal{G}_{1.1-1.2}\) reveals that
 obtaining corrections for biased reporters requires additional
 information when there is a directed measurement error. In this setting,
 bias correction requires knowledge of a function in which the treatment
@@ -858,7 +858,7 @@ bias can occur if the treatment affects the outcome reporter, even
 without a direct effect of the treatment on the error terms of the
 outcome reporter.
 
-Table~\ref{tbl-tblswigmex}\(\mathcal{G}_{2.1-2.2}\) clarifies that
+\textbf{?@tbl-tblswigmex}\(\mathcal{G}_{2.1-2.2}\) clarifies that
 correlated biases in the errors of the treatment and outcome reporters
 create additional demands for measurement error correction. The
 behaviour of the correlated error must be evaluated for both
@@ -880,19 +880,6 @@ mismeasurement of treatments across populations. Statistical tests alone
 cannot distinguish between effect modification from treatment effect
 heterogeneity and effect modification from heterogeneous reporting of
 treatments or outcomes.
-
-\begin{table}
-
-\caption{\label{tbl-tblswigmex}Single World Intervention Graph reveals
-strategies for redressing measurement error.}
-
-\centering{
-
-\tblswigmex
-
-}
-
-\end{table}%
 
 \subsubsection{Summary}\label{summary}
 
@@ -955,7 +942,7 @@ biases):
   Single World Intervention Graphs to show that both biases may operate
   together and in conjunction with confounding biases. We would add
   effect modifier nodes to the SWIGs in Table~\ref{tbl-tblswigme} and
-  Table~\ref{tbl-tblswigmex}.
+  \textbf{?@tbl-tblswigmex}.
 \item
   Despite the utility of Single World Intervention Graphs (and causal
   DAGs) for clarifying structural features of bias, whether confounding
