--- a/manuscripts/24-accepted-ehs/part-4-experiments/part-4-experiments.qmd
+++ b/manuscripts/24-accepted-ehs/part-4-experiments/part-4-experiments.qmd
@@ -1,5 +1,5 @@
 ---
-title: 'Methods for Causal Inference Part 4: Confounding in Experiments'
+title: 'Methods in Causal Inference Part 4: Confounding in Experiments'
 abstract: |
   Confounding bias arises when a treatment and outcome share a common cause. In randomised controlled experiments (trials), treatment assignment is random, ostensibly eliminating confounding bias. Here, we use causal directed acyclic graphs (causal DAGs) to unveil eight structural sources of bias that nevertheless persist in these trials. This analysis highlights the crucial role of causal inference methods in the design and analysis of experiments, ensuring the validity of conclusions drawn from experimental data.
   
