--- a/manuscripts/24-accepted-ehs/part-4-experiments/part-4-experiments.tex
+++ b/manuscripts/24-accepted-ehs/part-4-experiments/part-4-experiments.tex
@@ -188,7 +188,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Methods for Causal Inference Part 4: Confounding in Experiments},
+  pdftitle={Methods in Causal Inference Part 4: Confounding in Experiments},
   pdfauthor={Joseph A. Bulbulia},
   colorlinks=true,
   linkcolor={blue},
@@ -197,7 +197,7 @@
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{Methods for Causal Inference Part 4: Confounding in Experiments}
+\title{Methods in Causal Inference Part 4: Confounding in Experiments}
 
 \usepackage{academicons}
 \usepackage{xcolor}
@@ -210,7 +210,7 @@
       
 
 
-\date{2024-06-12}
+\date{2024-06-13}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -295,7 +295,7 @@ effect measure, and target population,
 (\citeproc{ref-hernuxe1n2004}{Hernán 2004};
 \citeproc{ref-tripepi2007}{Tripepi \emph{et al.} 2007}) and to
 evaluating sources of measurement error bias
-(\citeproc{ref-bulbulia2024wierd}{Bulbulia 2024b}).
+(\citeproc{ref-bulbulia2024wierd}{Bulbulia 2024 (in press)b}).
 
 \subsubsection{Meaning of Symbols}\label{meaning-of-symbols}
 
@@ -682,8 +682,9 @@ estimators (\citeproc{ref-diaz2023lmtp}{Díaz \emph{et al.} 2023};
 The examples considered here do not exhaust all threats to causal
 inference in experiments. For example, I have not covered biases arising
 from sample attrition (refer to Bulbulia
-(\citeproc{ref-bulbulia2024wierd}{2024b})). However, I hope the eight
-examples presented persuade experimental investigators of the following:
+(\citeproc{ref-bulbulia2024wierd}{2024 (in press)b})). However, I hope
+the eight examples presented persuade experimental investigators of the
+following:
 
 First, there is no need to adjust for baseline confounders in a
 non-sequential randomised experiment. Although an unadjusted difference
@@ -722,7 +723,7 @@ required when estimating causal effects in observational studies.
 Fourth, in a sequential randomised experiment, standard methods such as
 regression adjustment, statistical structural equation models, and
 multi-level models will often fail to yield unbiased estimands
-(\citeproc{ref-bulbulia2024swigstime}{Bulbulia 2024a};
+(\citeproc{ref-bulbulia2024swigstime}{Bulbulia 2024 (in press)a};
 \citeproc{ref-richardson2013}{Richardson and Robins 2013};
 \citeproc{ref-young2014identification}{Young \emph{et al.} 2014}).
 Special estimators such as `g-methods'
@@ -772,9 +773,9 @@ From these observations, we offer the following practical advice:
 
 In a separate work, I considered bias arising from attrition in the
 absence of confounding when treatment assignment is randomised
-(\citeproc{ref-bulbulia2024wierd}{Bulbulia 2024b}). Describing the
-special methods for estimating per-protocol effects with multiple
-sequential treatments is beyond the scope of this commentary
+(\citeproc{ref-bulbulia2024wierd}{Bulbulia 2024 (in press)b}).
+Describing the special methods for estimating per-protocol effects with
+multiple sequential treatments is beyond the scope of this commentary
 (\citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024}). My aim has
 been to demonstrate that satisfying the assumptions for valid causal
 inferences in experiments is often more challenging than many
@@ -807,12 +808,12 @@ decision to publish it.
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
 \bibitem[\citeproctext]{ref-bulbulia2024swigstime}
-Bulbulia, JosephA (2024a) Methods in causal inference part 2:
+Bulbulia, JosephA (2024 (in press)a) Methods in causal inference part 2:
 Interaction, mediation, and time-varying treatments. \emph{Evolutionary
 Human Sciences}, \textbf{6}.
 
 \bibitem[\citeproctext]{ref-bulbulia2024wierd}
-Bulbulia, JosephA (2024b) Methods in causal inference part 3:
+Bulbulia, JosephA (2024 (in press)b) Methods in causal inference part 3:
 Measurement error and external validity threats. \emph{Evolutionary
 Human Sciences}, \textbf{6}.
 
