--- a/manuscripts/24-accepted-ehs/part-4-experiments/s1-part-4-experiments.qmd
+++ b/manuscripts/24-accepted-ehs/part-4-experiments/s1-part-4-experiments.qmd
@@ -1,5 +1,5 @@
 ---
-title: 'Supplementary files for Commentary Confounding in Experiments'
+title: 'Supplementary files for "Methods in Causal Inference Part 4: Confounding in Experiments"'
 author: 
   - name: Joseph A. Bulbulia
     affiliation: Victoria University of Wellington, New Zealand
