--- a/manuscripts/24-accepted-ehs/part-4-experiments/s1-part-4-experiments.tex
+++ b/manuscripts/24-accepted-ehs/part-4-experiments/s1-part-4-experiments.tex
@@ -141,7 +141,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Supplementary files for Commentary Confounding in Experiments},
+  pdftitle={Supplementary files for ``Methods in Causal Inference Part 4: Confounding in Experiments''},
   pdfauthor={Joseph A. Bulbulia},
   colorlinks=true,
   linkcolor={blue},
@@ -150,7 +150,8 @@
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{Supplementary files for Commentary Confounding in Experiments}
+\title{Supplementary files for ``Methods in Causal Inference Part 4:
+Confounding in Experiments''}
 
 \usepackage{academicons}
 \usepackage{xcolor}
@@ -163,7 +164,7 @@
       
 
 
-\date{2024-06-12}
+\date{2024-06-13}
 \begin{document}
 \maketitle
 
